[gd_scene load_steps=31 format=2]

[ext_resource path="res://game/Grid.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/assets/images/themes/default/background.png" type="Texture" id=2]
[ext_resource path="res://game/game.gd" type="Script" id=3]
[ext_resource path="res://game/assets/music/loading.ogg" type="AudioStream" id=4]
[ext_resource path="res://game/assets/music/traveling the sea.ogg" type="AudioStream" id=5]
[ext_resource path="res://game/ui/ScoreSubmitter.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/ui/PauseMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://game/assets/images/themes/default/sign_medium.png" type="Texture" id=8]
[ext_resource path="res://game/ui/GameEnd.tscn" type="PackedScene" id=9]
[ext_resource path="res://game/assets/images/white_dot.png" type="Texture" id=10]
[ext_resource path="res://shared/fonts/Bebas Neue/BebasNeue-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://game/assets/images/themes/default/chain.png" type="Texture" id=12]
[ext_resource path="res://game/assets/images/themes/default/sign_small.png" type="Texture" id=13]
[ext_resource path="res://game/TextEffectManager.tscn" type="PackedScene" id=14]
[ext_resource path="res://game/BlockMoverManager.tscn" type="PackedScene" id=15]
[ext_resource path="res://game/BlockMover.tscn" type="PackedScene" id=16]
[ext_resource path="res://game/assets/images/rotate.png" type="Texture" id=17]
[ext_resource path="res://game/assets/images/themes/default/single.png" type="Texture" id=18]
[ext_resource path="res://game/Cursor.tscn" type="PackedScene" id=19]
[ext_resource path="res://game/theme_manager.gd" type="Script" id=20]

[sub_resource type="Environment" id=8]
background_mode = 4
glow_enabled = true
glow_intensity = 0.49
glow_hdr_threshold = 1.5
glow_bicubic_upscale = true
glow_high_quality = true

[sub_resource type="DynamicFont" id=12]
size = 40
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 11 )

[sub_resource type="Shader" id=11]
code = "shader_type canvas_item;
uniform vec2 player_position;
uniform vec4 color : hint_color = vec4(0.305, 0.298, 0.341,1);

uniform float MULTIPLIER = 0.56;
uniform float SCALE = 0.5;
uniform float SOFTNESS = 0.45;

void fragment(){
	float val = distance(vec2(UV.x , UV.y * MULTIPLIER), vec2(player_position.x , player_position.y * MULTIPLIER));
	val = val / SCALE;
	float vignette = smoothstep(0.2, SOFTNESS, val);
	COLOR = vec4(color.rgb , vignette );
}"

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 11 )
shader_param/player_position = Vector2( 0.5, 0.5 )
shader_param/color = Color( 0.305, 0.298, 0.341, 1 )
shader_param/MULTIPLIER = 0.56
shader_param/SCALE = 1.758
shader_param/SOFTNESS = 0.45

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform float blur : hint_range(0, 6) =0.5;

void fragment() {
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV, blur);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/blur = 2.0

[sub_resource type="Animation" id=5]
resource_name = "BlurIn"
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 2.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../BlackTransparent:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.54902 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../BlackTransparent:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "BlurOut"
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../BlackTransparent:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.54902 ), Color( 0, 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../BlackTransparent:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../BlackTransparent:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../BlackTransparent:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="Game" type="Node"]
script = ExtResource( 3 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 8 )

[node name="BlockMoverManager" parent="." instance=ExtResource( 15 )]
unique_name_in_owner = true

[node name="BlockMover1" parent="BlockMoverManager" instance=ExtResource( 16 )]

[node name="StartPos" parent="BlockMoverManager/BlockMover1" index="0"]
position = Vector2( 88, 223 )

[node name="EndPos" parent="BlockMoverManager/BlockMover1" index="1"]
position = Vector2( 394, 316 )

[node name="BlockMover2" parent="BlockMoverManager" instance=ExtResource( 16 )]

[node name="StartPos" parent="BlockMoverManager/BlockMover2" index="0"]
position = Vector2( 1841, 209 )

[node name="EndPos" parent="BlockMoverManager/BlockMover2" index="1"]
position = Vector2( 1511, 278 )

[node name="BlockMover3" parent="BlockMoverManager" instance=ExtResource( 16 )]

[node name="StartPos" parent="BlockMoverManager/BlockMover3" index="0"]
position = Vector2( 79, 545 )

[node name="EndPos" parent="BlockMoverManager/BlockMover3" index="1"]
position = Vector2( 391, 554 )

[node name="BlockMover4" parent="BlockMoverManager" instance=ExtResource( 16 )]

[node name="StartPos" parent="BlockMoverManager/BlockMover4" index="0"]
position = Vector2( 1843, 543 )

[node name="EndPos" parent="BlockMoverManager/BlockMover4" index="1"]
position = Vector2( 1515, 530 )

[node name="BlockMover5" parent="BlockMoverManager" instance=ExtResource( 16 )]

[node name="StartPos" parent="BlockMoverManager/BlockMover5" index="0"]
position = Vector2( 74, 877 )

[node name="EndPos" parent="BlockMoverManager/BlockMover5" index="1"]
position = Vector2( 397, 815 )

[node name="BlockMover6" parent="BlockMoverManager" instance=ExtResource( 16 )]

[node name="StartPos" parent="BlockMoverManager/BlockMover6" index="0"]
position = Vector2( 1841, 866 )

[node name="EndPos" parent="BlockMoverManager/BlockMover6" index="1"]
position = Vector2( 1518, 838 )

[node name="TextEffectManager" parent="." instance=ExtResource( 14 )]
unique_name_in_owner = true

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="HintTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="Cursor" parent="." instance=ExtResource( 19 )]
position = Vector2( 965, 564 )

[node name="Grid" parent="." instance=ExtResource( 1 )]
unique_name_in_owner = true

[node name="ThemeManager" type="Node" parent="."]
script = ExtResource( 20 )

[node name="Background" type="Node2D" parent="."]
z_index = -5
__meta__ = {
"_edit_group_": true
}

[node name="BGrect" type="TextureRect" parent="Background"]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="RotateLeft" type="Node2D" parent="."]
position = Vector2( 467, -200 )

[node name="Single" type="Sprite" parent="RotateLeft"]
position = Vector2( 35, 92.25 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 18 )

[node name="Rotate" type="Sprite" parent="RotateLeft"]
modulate = Color( 1.7, 1.7, 1.7, 1 )
position = Vector2( 36, 91.25 )
scale = Vector2( 0.44, 0.44 )
texture = ExtResource( 17 )

[node name="Label" type="Label" parent="RotateLeft"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
margin_left = -55.0
margin_top = 76.25
margin_right = 120.0
margin_bottom = 124.25
custom_fonts/font = SubResource( 12 )
text = "a"
align = 1
valign = 1

[node name="Chains" type="Node2D" parent="RotateLeft"]
position = Vector2( -467, 200 )

[node name="Chain" type="Sprite" parent="RotateLeft/Chains"]
position = Vector2( 526, -185 )
texture = ExtResource( 12 )

[node name="Chain2" type="Sprite" parent="RotateLeft/Chains"]
position = Vector2( 526, -155 )
texture = ExtResource( 12 )

[node name="Chain3" type="Sprite" parent="RotateLeft/Chains"]
position = Vector2( 477.5, -185 )
texture = ExtResource( 12 )

[node name="Chain4" type="Sprite" parent="RotateLeft/Chains"]
position = Vector2( 477.5, -155 )
texture = ExtResource( 12 )

[node name="Score" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2( 602, -200 )

[node name="SignSmall" type="Sprite" parent="Score"]
position = Vector2( 97.5, 154 )
texture = ExtResource( 13 )

[node name="SignMedium" type="Sprite" parent="Score"]
position = Vector2( 95.5, 81.5 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="Score"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
margin_left = 8.5
margin_top = 60.5
margin_right = 183.5
margin_bottom = 106.5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Score"
align = 1
valign = 1

[node name="Value" type="Label" parent="Score"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
margin_left = 30.0
margin_top = 133.0
margin_right = 165.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[node name="Chains" type="Node2D" parent="Score"]
position = Vector2( -603, 200 )

[node name="Chain" type="Sprite" parent="Score/Chains"]
position = Vector2( 619, -185 )
texture = ExtResource( 12 )

[node name="Chain2" type="Sprite" parent="Score/Chains"]
position = Vector2( 777, -185 )
texture = ExtResource( 12 )

[node name="Chain3" type="Sprite" parent="Score/Chains"]
position = Vector2( 619, -155 )
texture = ExtResource( 12 )

[node name="Chain4" type="Sprite" parent="Score/Chains"]
position = Vector2( 777, -155 )
texture = ExtResource( 12 )

[node name="Chain5" type="Sprite" parent="Score/Chains"]
position = Vector2( 640.5, -82 )
texture = ExtResource( 12 )

[node name="Chain6" type="Sprite" parent="Score/Chains"]
position = Vector2( 758.5, -82 )
texture = ExtResource( 12 )

[node name="Time" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2( 868, -200 )

[node name="SignSmall" type="Sprite" parent="Time"]
position = Vector2( 90.5, 154 )
texture = ExtResource( 13 )

[node name="SignMedium" type="Sprite" parent="Time"]
position = Vector2( 88.5, 81.5 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="Time"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
margin_left = 1.5
margin_top = 60.5
margin_right = 176.5
margin_bottom = 106.5
custom_fonts/font = SubResource( 2 )
text = "Time"
align = 1
valign = 1

[node name="Value" type="Label" parent="Time"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
margin_left = 23.0
margin_top = 133.0
margin_right = 158.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 2 )
text = "0:00"
align = 1
valign = 1

[node name="Chains" type="Node2D" parent="Time"]
position = Vector2( -869, 200 )

[node name="Chain" type="Sprite" parent="Time/Chains"]
position = Vector2( 878, -185 )
texture = ExtResource( 12 )

[node name="Chain2" type="Sprite" parent="Time/Chains"]
position = Vector2( 1036, -185 )
texture = ExtResource( 12 )

[node name="Chain3" type="Sprite" parent="Time/Chains"]
position = Vector2( 878, -155 )
texture = ExtResource( 12 )

[node name="Chain4" type="Sprite" parent="Time/Chains"]
position = Vector2( 1036, -155 )
texture = ExtResource( 12 )

[node name="Chain5" type="Sprite" parent="Time/Chains"]
position = Vector2( 899.5, -82 )
texture = ExtResource( 12 )

[node name="Chain6" type="Sprite" parent="Time/Chains"]
position = Vector2( 1017.5, -82 )
texture = ExtResource( 12 )

[node name="Cleared" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2( 1134, -200 )

[node name="SignSmall" type="Sprite" parent="Cleared"]
position = Vector2( 90.5, 154 )
texture = ExtResource( 13 )

[node name="SignMedium" type="Sprite" parent="Cleared"]
position = Vector2( 88.5, 81.5 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="Cleared"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
margin_left = 1.5
margin_top = 60.5
margin_right = 176.5
margin_bottom = 106.5
custom_fonts/font = SubResource( 2 )
text = "Words Cleared"
align = 1
valign = 1

[node name="Value" type="Label" parent="Cleared"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
margin_left = 23.0
margin_top = 133.0
margin_right = 158.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[node name="Chains" type="Node2D" parent="Cleared"]
position = Vector2( -1134, 200 )

[node name="Chain" type="Sprite" parent="Cleared/Chains"]
position = Vector2( 1144, -185 )
texture = ExtResource( 12 )

[node name="Chain2" type="Sprite" parent="Cleared/Chains"]
position = Vector2( 1302, -185 )
texture = ExtResource( 12 )

[node name="Chain3" type="Sprite" parent="Cleared/Chains"]
position = Vector2( 1144, -155 )
texture = ExtResource( 12 )

[node name="Chain4" type="Sprite" parent="Cleared/Chains"]
position = Vector2( 1302, -155 )
texture = ExtResource( 12 )

[node name="Chain5" type="Sprite" parent="Cleared/Chains"]
position = Vector2( 1165.5, -82 )
texture = ExtResource( 12 )

[node name="Chain6" type="Sprite" parent="Cleared/Chains"]
position = Vector2( 1283.5, -82 )
texture = ExtResource( 12 )

[node name="RotateRight" type="Node2D" parent="."]
position = Vector2( 1355, -200 )

[node name="Single" type="Sprite" parent="RotateRight"]
position = Vector2( 35, 92.25 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 18 )

[node name="Rotate" type="Sprite" parent="RotateRight"]
modulate = Color( 1.7, 1.7, 1.7, 1 )
position = Vector2( 36, 91.25 )
scale = Vector2( 0.44, 0.44 )
texture = ExtResource( 17 )
flip_h = true

[node name="Label" type="Label" parent="RotateRight"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
margin_left = -51.0
margin_top = 76.0
margin_right = 124.0
margin_bottom = 124.0
custom_fonts/font = SubResource( 12 )
text = "d"
align = 1
valign = 1

[node name="Chains" type="Node2D" parent="RotateRight"]
position = Vector2( -1355, 200 )

[node name="Chain" type="Sprite" parent="RotateRight/Chains"]
position = Vector2( 1414, -185 )
texture = ExtResource( 12 )

[node name="Chain2" type="Sprite" parent="RotateRight/Chains"]
position = Vector2( 1414, -155 )
texture = ExtResource( 12 )

[node name="Chain3" type="Sprite" parent="RotateRight/Chains"]
position = Vector2( 1365.5, -185 )
texture = ExtResource( 12 )

[node name="Chain4" type="Sprite" parent="RotateRight/Chains"]
position = Vector2( 1365.5, -155 )
texture = ExtResource( 12 )

[node name="Tween" type="Tween" parent="."]

[node name="MainTrack" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource( 5 )
volume_db = 3.0
bus = "Music"

[node name="PausedTrack" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource( 4 )
volume_db = 4.0
bus = "Music"

[node name="BlackTransparent" type="ColorRect" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0 )

[node name="Vignette" type="ColorRect" parent="."]
visible = false
material = SubResource( 10 )
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0 )

[node name="BlurRect" type="TextureRect" parent="."]
visible = false
material = SubResource( 4 )
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 10 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="BlurRect"]
playback_speed = 1.25
anims/BlurIn = SubResource( 5 )
anims/BlurOut = SubResource( 6 )
anims/RESET = SubResource( 7 )

[node name="ScoreSubmitter" parent="." instance=ExtResource( 6 )]
unique_name_in_owner = true
visible = false

[node name="GameEnd" parent="." instance=ExtResource( 9 )]
unique_name_in_owner = true
visible = false

[node name="PauseMenu" parent="." instance=ExtResource( 7 )]
unique_name_in_owner = true
visible = false

[node name="FPSCounter" type="Label" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 1842.0
margin_top = 4.0
margin_right = 1918.0
margin_bottom = 18.0
text = "FPS: "

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="HintTimer" to="." method="_on_HintTimer_timeout"]
[connection signal="hiding" from="Cursor" to="." method="_on_Cursor_hiding"]
[connection signal="showing" from="Cursor" to="." method="_on_Cursor_showing"]
[connection signal="score_accepted" from="ScoreSubmitter" to="." method="_on_ScoreSubmitter_score_accepted"]
[connection signal="exit" from="GameEnd" to="." method="_on_GameEnd_exit"]
[connection signal="retry" from="GameEnd" to="." method="_on_GameEnd_retry"]
[connection signal="exit_to_menu" from="PauseMenu" to="." method="_on_PauseMenu_exit_to_menu"]
[connection signal="give_up" from="PauseMenu" to="." method="_on_PauseMenu_give_up"]
[connection signal="mute" from="PauseMenu" to="." method="_on_PauseMenu_mute"]
[connection signal="quit" from="PauseMenu" to="." method="_on_PauseMenu_quit"]
[connection signal="restart" from="PauseMenu" to="." method="_on_PauseMenu_restart"]
[connection signal="resume" from="PauseMenu" to="." method="_on_PauseMenu_resume"]

[editable path="BlockMoverManager/BlockMover1"]
[editable path="BlockMoverManager/BlockMover2"]
[editable path="BlockMoverManager/BlockMover3"]
[editable path="BlockMoverManager/BlockMover4"]
[editable path="BlockMoverManager/BlockMover5"]
[editable path="BlockMoverManager/BlockMover6"]
